Add Stanford NLP

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,14 +15,17 @@
   <script type="text/javascript" src="libs/bootstrap3/bootstrap.min.js"></script>
 
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/alchemyResource.js"></script>
   <script type="text/javascript" src="js/header/appCtrl.js"></script>
   <script type="text/javascript" src="js/header/headerCtrl.js"></script>
   <script type="text/javascript" src="js/commons/exceptionHandler.js"></script>
   <script type="text/javascript" src="js/commons/httpRequestTracker.js"></script>
   <script type="text/javascript" src="js/notifications/bsNotifications.js"></script>
 
-  <script type="text/javascript" src="js/entities/entitiesCtrl.js"></script>
+  <script type="text/javascript" src="js/alchemy/entitiesCtrl.js"></script>
+  <script type="text/javascript" src="js/alchemy/alchemyResource.js"></script>
+
+  <script type="text/javascript" src="js/stanford/stanfordCtrl.js"></script>
+  <script type="text/javascript" src="js/stanford/stanfordResource.js"></script>
 </head>
 
 <body ng-controller="appCtrl">
