--- a/src/main/webapp/js/header/header.tpl.html
+++ b/src/main/webapp/js/header/header.tpl.html
@@ -14,7 +14,8 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Entities</a></li>
+          <li ui-sref-active="active"><a href ui-sref="alchemy">AlchemyAPI</a></li>
+          <li ui-sref-active="active"><a href ui-sref="stanford">StanfordNLP</a></li>
         </ul>
       </div>
     </div>
